[package]
name = "mathlikeanim-rs"
version = "0.10.17"
edition = "2021"
readme = "README.md"
description = "A Rust library for creating mathematical animations"
license = "MIT"
repository = "https://github.com/MathItYT/mathlikeanim-rs"
exclude = [
    "/examples",
    "/docs",
    "/javascript",
    "/target",
    "*.svg",
    "*.mp4",
    "*.tex",
    "*.log",
    "*.aux",
    "*.dvi",
    "node_modules",
    "pkg",
    "package-lock.json",
    "package.json",
    "webpack.config.js",
    "app.yaml",
    ".gcloudignore",
]
keywords = ["animation", "graphics", "easing", "transitions", "WebAssembly"]
categories = ["mathematics", "graphics", "wasm"]

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
web-sys = { version="0.3.69", features=[
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'ImageData',
    'HtmlImageElement',
    'CanvasPattern',
    'CanvasGradient',
    'HtmlDivElement',
    'CanvasWindingRule'
] }
wasm-bindgen-futures = "0.4.42"
contour-isobands = "0.4.3"
regex = "1.10.5"
usvg = "0.43.0"
lightningcss = "1.0.0-alpha.59"
svg = "0.17.0"

[lib]
name = "index"
crate-type = ["cdylib", "rlib"]
