[package]
name = "mathlikeanim-rs"
version = "0.14.5"
edition = "2021"
readme = "README.md"
description = "A Rust library for creating mathematical animations"
license = "MIT"
repository = "https://github.com/MathItYT/mathlikeanim-rs"
exclude = [
    "/examples",
    "/docs",
    "/javascript",
    "/target",
    "/python",
    "*.svg",
    "*.mp4",
    "*.tex",
    "*.log",
    "*.aux",
    "*.dvi",
    "node_modules",
    "pkg",
    "package-lock.json",
    "package.json",
    "webpack.config.js",
    "app.yaml",
    ".gcloudignore",
]
keywords = ["animation", "graphics", "easing", "transitions", "WebAssembly"]
categories = ["mathematics", "graphics", "wasm"]

[dependencies]
typst = "0.13.0"
typst-as-lib = "0.12.0"
typst-svg = "0.13.0"
usvg = { version = "0.44.0", features = ["text"] }
wasm-bindgen = "0.2.100"

[lib]
name = "index"
crate-type = ["cdylib", "rlib"]
