[package]
name = "html_canvas_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.68"
mathlikeanim-rs = { version = "0.5.1", path = "../.." }
once_cell = "1.19.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3.68", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }

[lib]
crate-type = ["cdylib", "rlib"]
