[package]
name = "polygon_vert"
version = "0.1.0"
edition = "2021"

[dependencies]
mathlikeanim-rs = { path = "../.." }
js-sys = "0.3.67"
lightningcss = "1.0.0-alpha.52"
svg = "0.15.0"
wasm-bindgen = "0.2.90"
web-sys = { version="0.3.67", features=[
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'ImageData',
    'HtmlImageElement',
    'CanvasPattern',
    'SvgElement'
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
async-std = {version="1.12.0", features=["attributes"]}
wasm-bindgen-futures = "0.4.40"
once_cell = "1.19.0"

[lib]
crate-type = ["cdylib", "rlib"]
