[package]
name = "svg_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mathlikeanim-rs = { version = "0.5.4", path = "../.." }
once_cell = "1.19.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "HtmlDivElement"] }

[lib]
crate-type = ["cdylib", "rlib"]
